SUBDIRS = astro \
	burstFit \
	catalogAccess \
	celestialSources \
	dataSubselector \
	embed_python \
	evtbin \
	facilities \
	flux \
	healpix \
	irfs \
	Likelihood \
	map_tools \
	optimizers \
	orbitSim \
	periodSearch \
	pulsarDb \
	pulsePhase \
	rspgen \
	st_app \
	st_facilities \
	st_graph \
	st_stream \
	timeSystem \
	tip \
	xmlBase \
	test-scripts 
