bin_PROGRAMS = test_Likelihood
test_Likelihood_SOURCES = SourceData.cxx test.cxx  XmlDiff.cxx
AM_LDFLAGS= -lLikelihood -lmap_tools -ldataSubselector -levtbin -loptimizers -lMinuit2 -lhealpix -lirfLoader -lEblAtten -lirfInterface -lirfUtil -llatResponse -ldc1aResponse -ltestResponse -lxmlBase -l${XERCES} -lfftw3 -l${CPPUNIT} -lc_utils -lgomp -lsharp -lcxxsupport -lwcs-5.16 -lgsl -lgslcblas -lhealpix_cxx -lfftpack -l${PYTHON} -l${HOOPS} -l${PIL} -lf2c -lst_app -lst_graph -lst_stream -lst_facilities -lastro -lfacilities -ltip -l${CLHEP} -l${CFITSIO} -lwcs-5.16 -lgsl -lgslcblas -lhealpix_cxx
