bin_PROGRAMS = test_burstFit
test_burstFit_SOURCES = test_burstFit.cxx
AM_LDFLAGS= -lburstFit -levtbin -lhealpix -loptimizers -lMinuit2 -lxmlBase -l${XERCES} -l${CLHEP} -lst_app -lst_graph -lst_stream -lst_facilities -lastro -ltip -lfacilities -lf2c -lwcs-5.16 -lsharp -lgomp -lcxxsupport -lgsl -lgslcblas -lhealpix_cxx
