SUBDIRS	= data
bin_PROGRAMS = test_burstFit
test_burstFit_SOURCES = test_burstFit.cxx
AM_LDFLAGS= -l${HOOPS} -l${PIL} -lfftpack -lburstFit -levtbin -lhealpix -loptimizers -lMinuit2 -lxmlBase -l${XERCES} -l${CLHEP} -lst_app -lpython2.7 -lst_graph -lst_stream -lst_facilities -lastro -ltip -lfacilities -lf2c -lwcs-5.16 -lsharp -lgomp -lcxxsupport -lc_utils -lgsl -lgslcblas -lhealpix_cxx
