bin_PROGRAMS = test_catalogAccess
test_catalogAccess_SOURCES = main_test.cxx
AM_LDFLAGS= -lcatalogAccess -l${HOOPS} -l${PIL} -l${CLHEP} -lfftpack -lst_app -lpython2.7 -lst_graph -lst_stream -lst_facilities -lastro -ltip -lfacilities -lf2c -lwcs-5.16 -lsharp -lgomp -lcxxsupport -lc_utils -lgsl -lgslcblas -lhealpix_cxx
