bin_PROGRAMS = test_dataSubselector
test_dataSubselector_SOURCES = test.cxx
AM_LDFLAGS= -lfftpack -l${PYTHON} -l${HOOPS} -l${PIL} -lf2c -lst_app -lst_graph -lst_stream -lst_facilities -lastro -lfacilities -ltip -l${CLHEP} -l${CFITSIO} -ldataSubselector -lirfUtil -levtbin -lhealpix -l${CPPUNIT} -lgomp -lsharp -lcxxsupport -lwcs-5.16 -lc_utils -lgsl -lgslcblas -lhealpix_cxx
