bin_PROGRAMS = test_evtbin
test_evtbin_SOURCES = test_evtbin.cxx
AM_LDFLAGS= -lfftpack -l${PYTHON} -l${HOOPS} -l${PIL} -lf2c -lst_app -lst_graph -lst_stream -lst_facilities -lastro -lfacilities -ltip -l${CLHEP} -l${CFITSIO} -ldataSubselector -lirfUtil -levtbin -lhealpix -l${CPPUNIT} -evtbin -lhealpix -lgomp -lc_utils -lcxxsupport -lsharp -lwcs-5.16 -lgsl -lgslcblas -lhealpix_cxx
