SUBDIRS	= data
bin_PROGRAMS = test_flux
test_flux_SOURCES = testMgr.cxx
AM_LDFLAGS= -lflux -lxmlBase -l${XERCES} -lc_utils -lgomp -lsharp -lcxxsupport -lwcs-5.16 -lgsl -lgslcblas -lhealpix_cxx -lfftpack -l${PYTHON} -l${HOOPS} -l${PIL} -lf2c -lst_app -lst_graph -lst_stream -lst_facilities -lastro -lfacilities -ltip -l${CLHEP} -l${CFITSIO} -lwcs-5.16 -lgsl -lgslcblas -lhealpix_cxx
