SUBDIRS	= data
bin_PROGRAMS = test_optimizers
test_optimizers_SOURCES = main.cxx
AM_LDFLAGS= -loptimizers -lMinuit2 -lflux -lxmlBase -l${XERCES} -lc_utils -lgomp -lsharp -lcxxsupport -lwcs-5.16 -lgsl -lgslcblas -lhealpix_cxx -lfftpack -l${PYTHON} -l${HOOPS} -l${PIL} -lf2c -lst_app -lst_graph -lst_stream -lst_facilities -lastro -lfacilities -ltip -l${CLHEP} -l${CFITSIO} -lwcs-5.16 -lgsl -lgslcblas -lhealpix_cxx
