SUBDIRS	= data
bin_PROGRAMS = test_periodSearch
test_periodSearch_SOURCES = test_psearch.cxx
AM_LDFLAGS= -lperiodSearch -ltimeSystem -lpulsarDb -lfftw3 -l${CPPUNIT} -lc_utils -lgomp -lsharp -lcxxsupport -lwcs-5.16 -lgsl -lgslcblas -lhealpix_cxx -lfftpack -l${PYTHON} -l${HOOPS} -l${PIL} -lf2c -lst_app -lst_graph -lst_stream -lst_facilities -lastro -lfacilities -ltip -l${CLHEP} -l${CFITSIO} -lwcs-5.16 -lgsl -lgslcblas -lhealpix_cxx
