bin_PROGRAMS = test_pointlike
test_pointlike_SOURCES = PhotonList.cxx test_main.cxx
AM_LDFLAGS= -lskymaps -lembed_python -ltimeSystem -lpointlike -lmap_tools -lhealpix -lc_utils -lgomp -lsharp -lcxxsupport -lwcs-5.16 -lgsl -lgslcblas -lhealpix_cxx -lfftpack -l${PYTHON} -l${HOOPS} -l${PIL} -lf2c -lst_app -lst_graph -lst_stream -lst_facilities -lastro -lfacilities -ltip -l${CLHEP} -l${CFITSIO} -lwcs-5.16 -lgsl -lgslcblas -lhealpix_cxx
