bin_PROGRAMS = test_rspgen
test_rspgen_SOURCES = test_rspgen.cxx
AM_LDFLAGS= -lrspgen -ldataSubselector -levtbin -lhealpix -lirfLoader -lirfInterface -lirfUtil -llatResponse -ldc1aResponse -ltestResponse -lc_utils -lgomp -lsharp -lcxxsupport -lwcs-5.16 -lgsl -lgslcblas -lhealpix_cxx -lfftpack -l${PYTHON} -l${HOOPS} -l${PIL} -lf2c -lst_app -lst_graph -lst_stream -lst_facilities -lastro -lfacilities -ltip -l${CLHEP} -l${CFITSIO} -lwcs-5.16 -lgsl -lgslcblas -lhealpix_cxx
