bin_PROGRAMS = test_timeSystem
test_timeSystem_SOURCES = test_timeSystem.cxx
AM_LDFLAGS= -ltimeSystem -lc_utils -lgomp -lsharp -lcxxsupport -lwcs-5.16 -lgsl -lgslcblas -lhealpix_cxx -lfftpack -l${PYTHON} -l${HOOPS} -l${PIL} -lf2c -lst_app -lst_graph -lst_stream -lst_facilities -lastro -lfacilities -ltip -l${CLHEP} -l${CFITSIO} -lwcs-5.16 -lgsl -lgslcblas -lhealpix_cxx
