bin_PROGRAMS = test_tip
test_tip_SOURCES = TestColumn.cxx TestExtensionData.cxx TestFilter.cxx TestInterpolation.cxx test_tip_main.cxx TestFileSummary.cxx TestImage.cxx TestTable.cxx TestFileManager.cxx TestHarness.cxx TestKeyRecord.cxx
AM_LDFLAGS= -ltip -lfacilities -l${HOOPS} -l${PIL} -l${CFITSIO} -l${READLINE}
