SUBDIRS = outref

dist_data_DATA         = 3EG_all.fits \
			  test1.fits \
                          1rxs_50.fits \
                          1rxs_50.out \
                          1rxs_50.tsv \
                          3EG_all.tsv \
                          3EG_test.out \
                          test.fits \
                          test3L.fits
