bin_PROGRAMS = test_EarthPhenom
test_EarthPhenom_SOURCES = test_main.cxx
AM_LDFLAGS= -l${HOOPS} -l${PIL} -lst_app -lst_graph -lst_stream -lst_facilities -lastro -lfacilities -ltip -l${CLHEP} -l${CFITSIO} -lwcs-5.16 -lflux -lxmlBase -l${XERCES} -lwcs-5.16 -lfftpack -lsharp -lc_utils -lcxxsupport -lgsl -lgslcblas -lgomp -lhealpix_cxx
