bin_PROGRAMS = test_eblAtten
test_eblAtten_SOURCES = test.cxx
AM_LDFLAGS= -l${PYTHON} -lf2c -leblAtten -l${HOOPS} -l${PIL} -lst_app -lst_graph -lst_stream -lst_facilities -lastro -lfacilities -ltip -l${CLHEP} -l${CFITSIO}  -lwcs-5.16 -lfftpack -lsharp -lc_utils -lcxxsupport -lgsl -lgslcblas -lgomp -lhealpix_cxx
