bin_PROGRAMS = test_genericSources
test_genericSources_SOURCES = test.cxx
AM_LDFLAGS= -l${PYTHON} -l${HOOPS} -l${PIL} -lf2c -lgenericSources -leblAtten -lflux -lst_app -lst_graph -lst_stream -lst_facilities -lastro -lfacilities -ltip -l${CLHEP} -l${CFITSIO} -lwcs-5.16 -lflux -lxmlBase -l${XERCES} -lwcs-5.16 -lfftpack -lsharp -lc_utils -lcxxsupport -lgsl -lgslcblas -lgomp -lhealpix_cxx
