SUBDIRS = outref
dist_data_DATA =	  LatBinnedTemplate \
                          LatCountCubeTemplate \
                          LatCountMapTemplate \
                          LatEnergyBinDef.tpl \
                          LatHealpixTemplate \
                          LatLightCurveTemplate \
                          LatSingleBinnedTemplate \
                          LatTimeBinDef.tpl
