bin_PROGRAMS = test_irfInterface
test_irfInterface_SOURCES = Edisp.cxx Psf.cxx test.cxx
AM_LDFLAGS= -lirfInterface -l${CPPUNIT} -lc_utils -lgomp -lsharp -lcxxsupport -lwcs-5.16 -lgsl -lgslcblas -lhealpix_cxx -lfftpack -l${PYTHON} -l${HOOPS} -l${PIL} -lf2c -lst_app -lst_graph -lst_stream -lst_facilities -lastro -lfacilities -ltip -l${CLHEP} -l${CFITSIO} -lwcs-5.16 -lgsl -lgslcblas -lhealpix_cxx
