SUBDIRS = outref
dist_data_DATA 				=   3c279Template.dat \
                          CrabTemplate.dat \
                          GemingaTemplate.dat \
                          pks1622-297_Template.dat \
                          pointing_history.txt \
                          source_names.dat \
                          xml_files.dat
